# sol_rs_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  jest.config.js  package.json
src/: json_extractor.rs  main.rs  openapi.rs  routes.rs
tests/: api_tests.js
