[package]
name = "sol_rs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "1.18.14"
solana-sdk = "1.18.14"
spl-token = "4.0.0"
bs58 = "0.5"
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
